# linear-cli-ai

./: .gitignore  README.md  linear.py  main.py  pyproject.toml
src/: configure.py  constants.py  exceptions.py  function_schema.py  gpt.py  linear.py  linear_ai.py  main.py  objectTypes.py
tests/: test_linear.py
