[tool.poetry]
name = "linear-cli-ai"
version = "0.1.0"
description = "A simple cli for interacting with linear"
authors = ["scar3crow <rss.holmes@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.8.10"
typer = {extras = ["all"], version = "^0.9.0"}
pyinquirer = "^1.0.3"
rich = "^13.4.2"
requests = "^2.31.0"
textual = {extras = ["dev"], version = "^0.28.0"}
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
